fix _quizzes.sass to use @if $use_high_contrast correctly
this does not change anything in the outputted css,
it just uses the "@if $use_high_contrast" code
correctly so it is more maintainable and readable

test plan:
* load quizzes in both normal and high contrast.
* it should look like it used to.

Reviewed-on: https://gerrit.instructure.com/49286
Tested-by: Jenkins
Product-Review: Chris Hart <chart@instructure.com>
QA-Review: Ryan Shaw <ryan@instructure.com>

--- a/app/stylesheets/pages/quizzes/_quizzes.sass
+++ b/app/stylesheets/pages/quizzes/_quizzes.sass
@@ -7,6 +7,11 @@ $borderColor: #AAA
 $questionHeaderBackground: #F5F5F5
 $selectedBorderColor: #31b5ff
 
+$answersSprite: url(/images/answers_sprite.png)
+@if $use_high_contrast
+  $answersSprite: url(/images/answers_sprite_hc.png)
+
+
 .accessibility-warning
   color: #fff
   background-color: #DC3F3F
@@ -238,9 +243,10 @@ div#content
         clear: both
         margin: 0 0 8px 0
         position: relative
-        opacity: 0.5
         @if $use_high_contrast
           opacity: 0.7
+        @else
+          opacity: 0.5
 
         &.correct_answer
           :background none
@@ -606,8 +612,7 @@ div#content
       &:focus
         left: 0
   .flag_question
-    :background url(/images/answers_sprite.png) -48px top
-    @if $use_high_contrast { background: url(/images/answers_sprite_hc.png) -48px top }
+    background: $answersSprite -48px top
     :cursor pointer
     :position absolute
     :left -30px
@@ -954,7 +959,7 @@ ul#quiz_versions
   .form
     padding: 1em
   #quiz_title
-      margin-top: 5px
+    margin-top: 5px
   .title #quiz_title
     width: 430px
   #student_submissions_warning,
@@ -1251,8 +1256,7 @@ ul#quiz_versions
 // styles for the correct/incorrect arrows on the quiz
 // review page.
 .answer_arrow
-  background-image: url(/images/answers_sprite.png)
-  @if $use_high_contrast { background: url(/images/answers_sprite_hc.png)}
+  background-image: $answersSprite
   background-repeat: repeat-x
   display: inline-block
   font-size: 12px
@@ -1264,21 +1268,15 @@ ul#quiz_versions
   text-align: center
   text-shadow: 0 -1px 0 rgba(#000, 0.5)
 
-  @if $use_high_contrast 
-    background-image: url(/images/answers_sprite_hc.png)
-
   &.correct:before, &.correct:after,
   &.incorrect:before, &.incorrect:after,
   &.info:before, &.info:after
-    background-image: url(/images/answers_sprite.png)
-    @if $use_high_contrast { background: url(/images/answers_sprite_hc.png)}
+    background-image: $answersSprite
     background-repeat: no-repeat
     content: ' '
     height: 27px
     position: absolute
     top: 0
-    @if $use_high_contrast 
-      background-image: url(/images/answers_sprite_hc.png)
 
   &.correct:before, &.incorrect:before, &.info:before
     left: -3px
